--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
-@font-face {font-family:"Cursed Timer ULiL";src:url("font/CursedTimerULiL.eot?") format("eot"),url("font/CursedTimerULiL.woff") format("woff"),url("font/CursedTimerULiL.ttf") format("truetype"),url("font/CursedTimerULiL.svg#CursedTimerULiL") format("svg");font-weight:normal;font-style:normal;}
+@font-face {
+    font-family: "Cursed Timer ULiL";
+    src: url("font/CursedTimerULiL.eot?") format("eot"), url("font/CursedTimerULiL.woff") format("woff"), url("font/CursedTimerULiL.ttf") format("truetype"), url("font/CursedTimerULiL.svg#CursedTimerULiL") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,34 +14,40 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    height: 60vh;
+
 }
-h3{
+
+h3 {
     font-size: 40px;
     margin-bottom: 21px;
     margin-top: 50px;
 }
-.wrapper{
-        background: #1B244A;    
-        border: 1px solid black;
-        border-radius: 20px;
+
+.wrapper {
+    background: #1B244A;
+    border: 1px solid black;
+    border-radius: 20px;
 
 }
-.container{
+
+.container {
     display: flex;
     justify-content: space-around;
-    text-align: center; 
+    text-align: center;
     margin-top: 10px;
     width: 575px;
     color: #EEEEEE;
 }
-.result-holder{
+
+.result-holder {
     display: flex;
     justify-content: center;
     align-items: center;
     background: #080001;
     border-radius: 5px;
 }
+
 .number {
     font-family: "Cursed Timer ULiL", sans-serif;
     color: #F94F6D;
@@ -46,11 +57,12 @@ h3{
     margin: 0;
 }
 
-.button-holder{
+.button-holder {
     margin-top: 25px;
     margin-bottom: 25px;
 }
-button{
+
+button {
     border: 2px solid #9AABD8;
     height: 45px;
     width: 45px;
@@ -60,7 +72,8 @@ button{
     background: #1B244A;
     font-weight: 400;
 }
-.reset-btn{
+
+.reset-btn {
     display: block;
     margin: 0 auto;
     width: 200px;
