--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ h3 {
 }
 
 .wrapper {
-    background: #1B244A;
+    background: #2e3c77;
     border: 1px solid black;
     border-radius: 20px;
 
