Background color of the app is changed

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ h3 {
 }
 
 .wrapper {
-    background: #2e3c77;
+    background: #4c6cec;
     border: 1px solid black;
     border-radius: 20px;
 
